login and sign in javascript

--- a/public/createAccount.html
+++ b/public/createAccount.html
@@ -14,14 +14,16 @@
   <nav class="navbar navbar-dark fixed-top">
     <a class="navbar-brand" href="#">Lego Tracker - Create Account</a>
   </nav>
-  <div id="mainPage" class="container page-container">
+  <div id="errorMessage" style="display:none">
+  </div>
+  <div id="createAccountPage" class="container page-container">
     <div class="form-group">
-      <label for="InputEmail1">Email address</label>
-      <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <label for="InputEmail">Email address</label>
+      <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
     </div>
     <div class="form-group">
-      <label for="InputPassword1">Password</label>
-      <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+      <label for="InputPassword">Password</label>
+      <input type="password" class="form-control" id="InputPassword" placeholder="Password">
     </div>
     <div class="form-group">
         <label for="InputKey">User Key</label>
