--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,17 @@
   <nav class="navbar navbar-dark fixed-top">
     <a class="navbar-brand" href="#">Lego Tracker - Login</a>
   </nav>
-  <div id="mainPage" class="container page-container">
-    <div class="form-group">
-      <label for="InputEmail1">Email address</label>
-      <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  <div id="loginPage" class="container page-container">
+    <div id="errorMessage" style="display:none">
+      Incorrect email or password
     </div>
     <div class="form-group">
-      <label for="InputPassword1">Password</label>
-      <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
+      <label for="InputEmail">Email address</label>
+      <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+      <label for="InputPassword">Password</label>
+      <input type="password" class="form-control" id="InputPassword" placeholder="Password">
     </div>
     <button id="LogInButton" type="submit" class="btn btn-primary">Log In</button>
     <a class="btn btn-primary" href="createAccount.html" role="button">Create Account</a>
@@ -30,11 +33,6 @@
   <script src="build/popper.js"></script>
   <script src="build/bootstrap-material-design.js"></script>
   <script>$("body").bootstrapMaterialDesign();</script>
-  <script src="/__/firebase/7.18.0/firebase-app.js"></script>
-  <script src="/__/firebase/7.18.0/firebase-analytics.js"></script>
-  <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
-  <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
-  <script src="/__/firebase/init.js"></script>
   <script src="build/bundle.js"></script>
 </body>
 
