--- a/public/createAccount.html
+++ b/public/createAccount.html
@@ -14,9 +14,10 @@
   <nav class="navbar navbar-dark fixed-top">
     <a class="navbar-brand" href="#">Lego Tracker - Create Account</a>
   </nav>
-  <div id="errorMessage" style="display:none">
-  </div>
+  
   <div id="createAccountPage" class="container page-container">
+      <div id="errorMessage" style="display:none;color:red">
+        </div>
     <div class="form-group">
       <label for="InputEmail">Email address</label>
       <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
