--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <a class="navbar-brand" href="#">Lego Tracker - Login</a>
   </nav>
   <div id="loginPage" class="container page-container">
-    <div id="errorMessage" style="display:none">
+    <div id="errorMessage" style="display:none;color:red">
       Incorrect email or password
     </div>
     <div class="form-group">
