--- a/public/collection.html
+++ b/public/collection.html
@@ -47,59 +47,31 @@
     <main class="bmd-layout-content">
       <div class="container">
         <div id="listPage" class="container page-container">
-          <div class="row">
-            <div class="col-12 col-md-4 col-lg-3">
-              <div class="card" data-toggle="modal" data-target="#setInfo10276">
-                <img class="card-img-top" src="https://cdn.rebrickable.com/media/sets/10276-1/75458.jpg"
-                  alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Colosseum</p>
-                </div>
-              </div>
-
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-              <div class="card">
-                <img class="card-img-top" src="https://cdn.rebrickable.com/media/sets/10276-1/75458.jpg"
-                  alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Colosseum</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3">
-              <div class="card">
-                <img class="card-img-top" src="https://cdn.rebrickable.com/media/sets/10276-1/75458.jpg"
-                  alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Colosseum</p>
-                </div>
-              </div>
-            </div>
+          <div id="listContainer" class="row">
+            Loading
           </div>
         </div>
       </div>
     </main>
   </div>
   <div id="modalContainer">
-    <div class="modal fade" id="setInfo10276" tabindex="-1" role="dialog">
+    <div class="modal fade" id="setInfo" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Colosseum</h5>
+            <h5 id="modalName" class="modal-title">Colosseum</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            <img class="img-fluid" src="https://cdn.rebrickable.com/media/sets/10276-1/75458.jpg">
-            <p>Price: 549.99</p>
-            <p>Theme: Creator</p>
-            <p>Set Number: 10276</p>
-            <p>Pieces: 9036</p>
+            <img id="modalImage" class="img-fluid" src="https://cdn.rebrickable.com/media/sets/10276-1/75458.jpg">
+            <p id="modalYear">Year: Creator</p>
+            <p id="modalSetNumber">Set Number: 10276</p>
+            <p id="modalPieceCount">Pieces: 9036</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Remove Set</button>
+            <button id="modalButton" type="button" class="btn btn-primary">Remove Set</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
