added Searching to Catalog page

--- a/public/collection.html
+++ b/public/collection.html
@@ -39,7 +39,7 @@
       </header>
       <ul class="list-group">
         <a class="list-group-item">My Collection</a>
-        <a class="list-group-item">Search Catalog</a>
+        <a class="list-group-item" href="/collection.html">Search Catalog</a>
         <a class="list-group-item">View Collections</a>
         <a class="list-group-item">Sign Out</a>
       </ul>
