--- a/public/collection.html
+++ b/public/collection.html
@@ -18,13 +18,13 @@
           <span class="sr-only">Toggle drawer</span>
           <i class="material-icons">menu</i>
         </button>
-        <a class="navbar-brand" href="collection.html">&nbsp;&nbsp;My Collection</a>
+        <a id="titleText"class="navbar-brand" href="collection.html?set=true">&nbsp;&nbsp;My Collection</a>
         <ul class="nav nav-tabs nav-fill">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Sets</a>
+            <a id="setsSelection" class="nav-link" href="/collection.html?set=true">Sets</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pieces</a>
+            <a id="piecesSelection" class="nav-link" href="/collection.html?">Pieces</a>
           </li>
         </ul>
       </div>
@@ -53,31 +53,65 @@
         </div>
       </div>
     </main>
+    <button id="prevPageButton"class="btn">Previous Page</button>
+    <button id="nextPageButton" class="btn">Next Page</button>
+
   </div>
   <div id="modalContainer">
     <div class="modal fade" id="setInfo" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 id="modalName" class="modal-title">Colosseum</h5>
+            <h5 id="modalName" class="modal-title">Loading</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            <img id="modalImage" class="img-fluid" src="https://cdn.rebrickable.com/media/sets/10276-1/75458.jpg">
-            <p id="modalYear">Year: Creator</p>
-            <p id="modalSetNumber">Set Number: 10276</p>
-            <p id="modalPieceCount">Pieces: 9036</p>
+            <img id="modalImage" class="img-fluid" src="">
+            <p id="modalYear"></p>
+            <p id="modalSetNumber"></p>
+            <p id="modalPieceCount"></p>
           </div>
           <div class="modal-footer">
-            <button id="modalButton" type="button" class="btn btn-primary">Remove Set</button>
+            <button id="modalButton" type="button" class="btn btn-primary" data-dismiss="modal">Remove Set</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="pieceInfo" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 id="modalPartTitle" class="modal-title">Loading</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <img id="modalPartImage" class="img-fluid" src="">
+            <p id="modalPartNumber"></p>
+            <p id="modalPartName"></p>
+
+            <select id="colorListSelect">
+            </select>
+          </div>
+          <div class="modal-footer">
+            <button id="modalButton" type="button" class="btn btn-primary" data-dismiss="modal">Add To collection</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <datalist id="colors">
+    <option value="Blue">
+    <option value="Black">
+    <option value="Green">
+    <option value="White">
+
+  </datalist>
 
   <script src="build/jquery.min.js"></script>
   <script src="build/popper.js"></script>
