--- a/public/collection.html
+++ b/public/collection.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <title>My Collection</title>
+  <title>Lego Tracker</title>
 </head>
 
 <body>
@@ -40,8 +40,7 @@
       <ul class="list-group">
         <a id="myCollectionButton" class="list-group-item">My Collection</a>
         <a class="list-group-item" href="/collection.html?set=true">Search Catalog</a>
-        <a class="list-group-item">View Collections</a>
-        <a id="signOutButton" class="list-group-item">Sign Out</a>
+        <a id="signOutButton" class="list-group-item" href="#">Sign Out</a>
       </ul>
     </div>
     <main class="bmd-layout-content">
