--- a/public/collection.html
+++ b/public/collection.html
@@ -39,7 +39,7 @@
       </header>
       <ul class="list-group">
         <a id="myCollectionButton" class="list-group-item">My Collection</a>
-        <a class="list-group-item" href="/collection.html?set=true">Search Catalog</a>
+        <a class="list-group-item" href="/collection.html?set=true&page=1">Search Catalog</a>
         <a id="profileSelection" class="list-group-item" href="/profile.html">Profile</a>
         <a id="signOutButton" class="list-group-item" href="#">Sign Out</a>
       </ul>
