more fixing paging

--- a/public/collection.html
+++ b/public/collection.html
@@ -21,10 +21,10 @@
         <a id="titleText" class="navbar-brand" href="collection.html?set=true">&nbsp;&nbsp;My Collection</a>
         <ul class="nav nav-tabs nav-fill">
           <li class="nav-item">
-            <a id="setsSelection" class="nav-link" href="/collection.html?set=true">Sets</a>
+            <a id="setsSelection" class="nav-link" href="/collection.html?set=true&page=1">Sets</a>
           </li>
           <li class="nav-item">
-            <a id="piecesSelection" class="nav-link" href="/collection.html?">Pieces</a>
+            <a id="piecesSelection" class="nav-link" href="/collection.html?page=1">Pieces</a>
           </li>
         </ul>
       </div>
